fix mc tag word wrap

--- a/packages/components/mc-tag/index.scss
+++ b/packages/components/mc-tag/index.scss
@@ -132,4 +132,9 @@ $text_color_status: var(--mc-white);
       border-color: $text_color_disabled_subtle;
     }
   }
+
+  .mc-tag-content {
+    word-wrap: nowrap;
+    text-wrap: nowrap;
+  }
 }
